/*
 * Copyright (C) 2014-2020 Lightbend Inc. <https://www.lightbend.com>
 */

syntax = "proto2";

package akka.cluster.typed;

option java_package = "akka.cluster.typed.internal.protobuf";
option optimize_for = SPEED;


message ReceptionistEntry {
  required string actorRef = 1;
  required uint64 systemUid = 2;
}

message PubSubMessagePublished {
  required bytes message = 1;
  required int32 serializerId = 2;
  optional string messageManifest = 3;
}